<resources>
    <string name="app_name">Turku Föli PysäKit</string>
    <string name="action_addFavs">Add to Favorites</string>
    <string name="action_delFavs">Remove from Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="action_updatedb">Download Data</string>
    <string name="action_deletedb">Delete Data</string>
    <string name="title_activity_stop_tool_selection">Föli PysäKit</string>
    <string name="title_activity_nearby_stops">Nearby Stops</string>
    <string name="title_activity_result">Results</string>
    <string name="navigation_drawer_open">Main Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="title_activity_nearby">Nearby Stops</string>
    <string name="ic_menu_search">Search</string>
    <string name="title_activity_busstop_db">Favorites Database</string>
    <string name="string_favorites">Favorites</string>
    <string name="string_addfavorites">Add</string>
    <string name="string_delfavorites">Delete</string>
    <string name="string_dl_wait">Downloading... please wait</string>
    <string name="setText_db">Download Database</string>
    <string name="DbButton_text">Organize Favorites</string>
    <string name="MapButton_text">View on Map</string>
    <string name="title_activity_stops_map">Stops on Map</string>
    <string name="NbButton_text">Nearby Stops</string>
    <string name="filterTextView">Show</string>
    <string name="filterSpinnerAll">All</string>
    <string name="Nearby_Wait_Message">Waiting for GPS</string>
    <string name="Nearby_Fail_Message">Having trouble finding GPS satellites. Use last known position instead?</string>
    <string name="Enable_GPS_Message">You need to enable GPS</string>
    <string name="nav_header_text">by Bus Catchers</string>
    <string name="ct_stop_tool_selection_header">Bus Stops</string>
    <string name="ct_stop_tool_selection_inputField">stop name or number</string>
    <string name="ct_bsi_line">Line</string>
    <string name="ct_bsi_Destination">Destination</string>
    <string name="ct_bsi_ETA">ETA</string>
    <string name="ct_bsdb_Show">Show</string>
    <string name="ct_bsdb_Add">Add</string>
    <string name="ct_bsdb_Remove">Remove</string>
    <string name="ct_bsi_Refresh">Refresh</string>
    <string name="ct_bsi_BTS">Back to search</string>
    <string name="OK_button">OK</string>
    <string name="Cancel_button">Cancel</string>
    <string name="resact_sb_add">The bus stop is now added to the favorites</string>
    <string name="resact_sb_remove">The bus stop is now removed from the favorites</string>
    <string name="info_label">About</string>
    <string name="info_text">Version 1.0 \n\nTeam Bus Catchers: \nJani Silvander \nMikko Ruskamo \nSanttu Alatalo \nWaqar Ahmed</string>
    <string name="title_activity_first_time_setup">First Time Setup</string>
    <string name="action_first_time_setup_startDownload">Start download</string>
    <string name="First_time_use_message">Welcome to PysäKit!\nThis is a first time setup which will download the latest bus stop data to your device.</string>
</resources>