<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/ic_menu_search" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/title_activity_nearby" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/MapButton_text" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/string_favorites" />
    </group>
<!--
    <item android:title="Placeholder">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->
</menu>